This file includes only a short list of the changes between MPC-HC's versions.
For the older changes see:
https://github.com/mpc-hc/mpc-hc/blob/master/docs/Changelog_old.txt

Legend:
+ New
* Changed
! Fixed


next version - not released yet
===============================
+ DVB: Show current event time in the status bar
+ DVB: Add context menu to the navigation dialog
+ Add Finnish translation
+ Ticket #1494, Add tooltip in the "Organize Favorites" dialog with path of the item
+ Ticket #4941, Support embedded cover-art
* DVB: Improve channel switching speed
* The "Properties" dialog should open faster being that the MediaInfo analysis is now done asynchronously
* Make double-click tolerance consistent with system settings
* Ticket #4978, Execute "once" after playback event when playlist ends, regardless of the loop count
* Ticket #4991, Text subtitles: "opaque box" outlines will now always be drawn even if the border width is set to 0.
  The size of the text is independent of the border width so there is no reason not to draw that part
* Ticket #5056, Position the text subtitles relative to the video frame by default
* Updated MediaInfoLib to v0.7.71
* Updated ZenLib to v0.4.29 r498
* Updated Little CMS to v2.7 (git 8174681)
* Updated Unrar to v5.2.2
* Updated LAV Filters to v0.63.0.2:
    - LAV Video Decoder: Fix a crash when the video height is not a multiple of 2
    - Ticket #5030, LAV Video Decoder: The video timestamps could be wrong in some cases when using H264 DXVA decoding.
      This could lead to synchronization issue with the audio
* Updated Arabic, Armenian, Basque, Belarusian, Bengali, British English, Catalan, Chinese (Simplified and Traditional),
  Croatian, Czech, Dutch, French, Galician, German, Greek, Hebrew, Hungarian, Italian, Japanese, Korean, Malay,
  Polish, Portuguese (Brazil), Romanian, Russian, Slovak, Slovenian, Spanish, Swedish, Tatar, Thai, Turkish,
  Ukrainian and Vietnamese translations