@@ -13,6 +13,8 @@ next version - not released yet
 + DVB: Show current event time in the status bar
 + DVB: Add context menu to the navigation dialog
 + Add Finnish translation
++ Ticket #907, Enable "Properties" dialog for DVD and DVB playback modes
++ Ticket #1091, Support MediaInfo analyse for DVD
 + Ticket #1494, Add tooltip in the "Organize Favorites" dialog with path of the item
 + Ticket #4941, Support embedded cover-art
 * DVB: Improve channel switching speed
